@@ -110,6 +110,8 @@ Version 1.4.6 - CVS
   - Moved inclusion of display_messages.php out of backend-dependent location
   - Moved sqm_baseuri() into more centralized location (strings.php).
   - Back-ported code change to only filter undeleted emails.
+  - Back-ported filter code change to test for filters before issuing possibly
+    expensive IMAP calls.
 
   
 Version 1.4.5 - 13 July 2005
